--- a/css/main.scss
+++ b/css/main.scss
@@ -321,7 +321,7 @@ $GaiaGrey: #2C2C2C;
                     flex-direction: column;
                     justify-content: flex-start;
                     height: fit-content;
-                    width: 95%;
+                    width: 100%;
                     justify-self: center;
                     margin-top: 4vw;
                     #side-image1-mobile{
@@ -422,27 +422,32 @@ $GaiaGrey: #2C2C2C;
 
 
                 #item3{
-                    display: flex;
-                    flex-direction: column;
+                    display: grid;
+                    grid-template-columns: 1fr;
                     background-color: white;
                     width: 100vw;
-                    height:100vh;
+                    height:fit-content;
                     align-items: center;
                     justify-items: center;
                     align-content: center;
                     justify-content: center;
-                    margin-top: 0;
+                    
                     #familyinfo{
-                        width:40%;
-                        height:70%;
+                        width:100%;
+                        height:fit-content;
                         display: grid;
                         grid-template-columns: 1fr;
-
+                        position: relative;
+                        justify-items: center;
+                        
+                        img{
+                            width:100%;
+                        }
                         h3{
                             font-family: 'Roboto';
                             font-style: normal;
                             font-weight: 900;
-                            font-size: 3vw;
+                            font-size: 46px;
                             line-height: 85%;
                             text-align: center;
                             font-variant: all-small-caps;
@@ -450,6 +455,7 @@ $GaiaGrey: #2C2C2C;
                             text-align: left;
                             margin-top: 0;
                             padding-bottom:5px;
+                            padding-top: 100px;
                             border-bottom:3px solid $GaiaDarkGreen;
                             width: fit-content;
                             height: fit-content;
@@ -459,23 +465,27 @@ $GaiaGrey: #2C2C2C;
                             color:$GaiaGrey;
                             font-family: 'Roboto';
                             font-weight: 300;
-                            font-size: 1.2vw;
+                            font-size: 18px;
                             line-height: 140%; 
                             text-align: left;
-                            width:50%;
+                            width:60%;
                             height:70%;
                             word-wrap: break-word;
                             margin:0;
-                            padding-top: 2vw;
+                            padding-top:70px;
+                            text-align: center;
 
                         }
                         h5{
                             font-family:'Sacramento';
+                            text-align: center;
                             color: black;
                             font-weight: 100;
-                            font-size: 2vw;
+                            font-size: 38px;
                             margin:0;
-                            padding-top: 2vw;
+                            padding-top: 70px;
+                            padding-bottom: 100px;
+                            width:70%;
                         }
                     }
                     img{
